Revisión scikit-learn y capítulo de sistema

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -23,6 +23,10 @@
 \usepackage{algorithmic}
 \usepackage{algorithm}
 \usepackage{listings}
+\lstset{
+	basicstyle=\ttfamily,
+	frame=single
+}
 \usepackage{color}
 \usepackage{setspace}
 \usepackage{caption}
