--- a/capitulos/Introduccion.tex
+++ b/capitulos/Introduccion.tex
@@ -39,4 +39,4 @@ Todo lo expuesto justifica sin duda la realización de este trabajo, en el que se
 \item \textbf{Capítulo 4. Evaluación.} Este capítulo describe la metodología utilizada para evaluar la propuesta realizada, a la vez que presenta los resultados obtenidos al evaluar el método propuesto en diferentes tareas y sobre colecciones de evaluación de distintos dominios.
 \item \textbf{Capítulo 5. Discusión.} Este capítulo analiza y discute en profundidad los resultados obtenidos en la evaluación presentada en el capítulo anterior.
 \item \textbf{Capítulo 6. Conclusiones y trabajo futuro.} Este capítulo recopila las diferentes conclusiones extraídas del trabajo realizado, y propone algunas líneas de trabajo futuro.
-\end{description} 
+\end{description} \todo{Completar al terminar el trabajo}
